# PERP

./: .gitignore  .replit  LINUX_DEPLOYMENT_GUIDE.md  PERP_backup_20250917_074504  README.md  advanced_telegram_bot.py  bitget_perp_order.py  direct_trading_bot.py  final_bot.py  gateio  gateio_perp_order.py  immortal_system.py  ipc_system.py  keepalive_launcher.py  launcher.py  logs  main_coordinator.py  market_tracker_health.txt  new_coin_output.txt  notification_config.py  production_supervisor.py  pyproject.toml  replit.md  secret.json  secret.py  simple_bot.py  simple_concurrency_test.py  simple_telegram_bot.py  simple_working_bot.py  stable_crypto_bot.py  stable_system_test.py  stable_trading_system.py  system_status.json  telegram_bot_controller.py  telegram_bot_health.txt  telegram_degisken.py  test_filter.py  tp_monitor.py  trading_bot.db-shm  trading_bot.db-wal  (+6 more)
PERP/: kapat.py  last_announcement_check.json  leverage.py  long.py  new_coin_output.json  new_coin_output.txt  order_fills.json  order_id.json  secret.json  seen_markets.json  upbit_ciftler_1.json  upbit_ciftler_2.json  upbit_market_tracker.py  upbit_new_list.json  yuzde.json
debug/: bitget_perp_order.py  manual_test.py  pnl_monitor.py  quick_test_bot.py  supervisor_bot.py  user_trading_engine.py
gateio/: gateio_long.py  kapat.py  new_coin_output.json  new_coin_output.txt  newprice_gateio.json  perp_sorgu.json  round_gate.py  secret.json  symbol_gate.py  yuzde.json
production/core/: notification_config.py  production_supervisor.py  upbit_announcement_scraper.py  user_trading_engine.py  (+1 more)
(+18 files in other folders)
