[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.22.0",
    "aiohttp>=3.12.15",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.5",
    "bitget-python-connector>=0.0.7",
    "cryptography>=45.0.7",
    "gate-api>=6.104.3",
    "python-bitget>=1.0.8",
    "python-telegram-bot[job-queue]>=22.3",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "telegram>=0.0.1",
    "tenacity>=9.1.2",
    "websocket-client>=1.8.0",
]
